do not use a fixed background image to see if it improves the sluggish scrolling issue on mobile devices

--- a/site/src/site/assets/css/style.css
+++ b/site/src/site/assets/css/style.css
@@ -21,8 +21,8 @@ html, body {
 #band {
     background: url(../img/groovy-logo-white.png) no-repeat;
     background-color: #4298b8;
-    background-attachment: fixed;
-    background-position: 50% 10%;
+    /*background-attachment: fixed;*/
+    background-position: 50% 30%;
 }
 
 #they-use-groovy {
